<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/language_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="3dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/terms_of_use"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/first_check"
        android:layout_below="@+id/top"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/posting_rules_header"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/content_rights"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/exceptions_note"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/prohibited_content"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/violence_policy"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:text="@string/violation_reporting"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <CheckBox
        android:id="@+id/first_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/second_check"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:buttonTint="@color/white"
        android:checked="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/first_check"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/second_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/termtextview"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:buttonTint="@color/white"
        android:checked="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/second_check"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/termtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        android:paddingBottom="16dp"
        android:text="@string/clickforprivacy"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/ratebox"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
