<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:aapt="http://schemas.android.com/aapt"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/language_bg"
        android:layoutDirection="ltr"
        android:textDirection="ltr">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_above="@+id/btm1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conTopBar"
                android:layout_width="1080px"
                android:layout_height="150px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="108px"
                    android:layout_height="108px"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/back_effect"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtSetting"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:layout_marginRight="@dimen/_45sdp"
                    android:fontFamily="@font/urbanist_medium"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conButtonBg"
                android:layout_width="920px"
                android:layout_height="396px"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/setting_button_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conTopBar">

                <TextView
                    android:id="@+id/txtSetting1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:gravity="center"
                    android:text="@string/setting_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toTopOf="@+id/btnUnlock"
                    app:layout_constraintEnd_toEndOf="@+id/btnUnlock"
                    app:layout_constraintStart_toStartOf="@+id/btnUnlock" />

                <ImageView
                    android:id="@+id/btnUnlock"
                    android:layout_width="500px"
                    android:layout_height="130px"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/setting_unlock_effect"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_63sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/urbanist_regular"
                    android:gravity="center_vertical"
                    android:text="@string/Unlock"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnUnlock"
                    app:layout_constraintEnd_toEndOf="@+id/btnUnlock"
                    app:layout_constraintStart_toStartOf="@+id/btnUnlock"
                    app:layout_constraintTop_toTopOf="@+id/btnUnlock" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conLanguage"
                android:layout_width="920px"
                android:layout_height="185px"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone"
                android:background="@drawable/setting_language_effect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conButtonBg">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:fontFamily="@font/urbanist_regular"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conShare"
                android:layout_width="920px"
                android:layout_height="185px"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/setting_share_effect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conLanguage">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:fontFamily="@font/urbanist_regular"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conRate"
                android:layout_width="920px"
                android:layout_height="185px"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/setting_rate_effect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conShare">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:fontFamily="@font/urbanist_regular"
                    android:gravity="center_vertical"
                    android:text="@string/rate_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conPrivacy"
                android:layout_width="920px"
                android:layout_height="185px"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/setting_privacy_effect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conRate">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:fontFamily="@font/urbanist_regular"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/btm1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <include
                android:id="@+id/reguler_banner_ad"
                layout="@layout/ads_layout_banner"
                android:visibility="visible" />

        </RelativeLayout>


    </RelativeLayout>
</layout>

